2006-09-13  Andras Varga

	* fix: the simulation can now be in a directory whose path name 
	contains spaces (e.g. "Program Files" or "OMNEST Demo")

	* cInifile::getAsFilenames() enhancement (as part of the above fix):
	if directory name contains spaces, quotes are used to escape it.

2006-06-26  Andras Varga

	* cinifile.cc: clearContents() made public.

2006-03-19  Andras Varga

	* omnetapp.cc: optimized checkTimeLimits() to call gettimeofday() less
	frequently.

2006-02-27  Andras Varga

	* cenvir.cc: implemented getParsimProcId() and getParsimNumPartitions()

2006-02-06  Andras Varga

	* envir.cc: undisposedObject() to print warning if it's called after 
	shutdown (when app==NULL). Source of such call is the destructor of
	the global cDefaultList. Typically only global variables go to 
	that list, and we strongly disapprove global vars.

2006-01-12  ------ omnetpp-3.2p1 released ------

2005-10-19  ------ omnetpp-3.2 released ------

2005-09-22  Andras Varga

	* implemented @@listfile in the preload-ned-files option. 
	See nedc/ChangeLog for more info.

2005-09-12  Andras Varga

        * cenvir.cc, omnetapp.cc/h: default of "perform-gc" option changed to
        false. USER-ALLOCATED OBJECTS ARE NO LONGER DELETED AT NETWORK CLEANUP.

        * new option:
            [General]
            print-undisposed=<bool>, default=true
	Selects whether the list of undisposed user objects is dumped at
	network cleanup (provided perform-gc=false). Ideally, users should
	fix simple module destructors instead of turning this option off.

	* filemgrs.cc/h: added new omnetpp.ini settings to adjust number
	of significant digits recorded into output vector and output scalar
	files:
	    [General]
	    output-scalar-precision=<int>,  default=12
	    output-vector-precision=<int>,  default=12
	The default precision is 12 digits. The following has to be considered
	when changing the default value:

	IEEE-754 doubles are 64-bit numbers. The mantissa is 52 bits, which