@@ -122,7 +122,6 @@ makefiles:
 re-makemake: makefiles
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-token.obj: token.cpp \
-  token_m.h
-token_m.obj: token_m.cpp \
-  token_m.h
+gen.obj: gen.cpp
+sink.obj: sink.cpp
+token.obj: token.cpp
