@@ -52,7 +52,7 @@ static void createFileName(opp_string& fname, int run_no, const char *configentr
     char section[16];
     sprintf(section,"Run %d",run_no);
 
-    fname = ev.config()->getAsFilenames2(section,"General",configentry,defaultval).c_str();
+    fname = ev.config()->getAsFilename2(section,"General",configentry,defaultval).c_str();
     ev.app->processFileName(fname);
 }
 
